time series basic plot created

--- a/Medical_Sales/medical_sales.ipynb
+++ b/Medical_Sales/medical_sales.ipynb
@@ -13,234 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "65af224a-964a-4ed5-ab77-e8114770c973",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Transaction_ID</th>\n",
-       "      <th>Transaction_Date</th>\n",
-       "      <th>Branch_ID</th>\n",
-       "      <th>Branch_Name</th>\n",
-       "      <th>District</th>\n",
-       "      <th>Province</th>\n",
-       "      <th>Payment_Method</th>\n",
-       "      <th>Customer_Gender</th>\n",
-       "      <th>Customer_Age</th>\n",
-       "      <th>Customer_City</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Supplier_Name</th>\n",
-       "      <th>Prescription_Required</th>\n",
-       "      <th>Batch_No</th>\n",
-       "      <th>Expiry_Date</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>Unit_Price_LKR</th>\n",
-       "      <th>Discount_Rate</th>\n",
-       "      <th>Line_Total_LKR</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6/22/2023</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pharmacy - Negombo</td>\n",
-       "      <td>Gampaha</td>\n",
-       "      <td>Western</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Matara</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Ceylon Pharma Traders</td>\n",
-       "      <td>No</td>\n",
-       "      <td>LK6929-39</td>\n",
-       "      <td>1/12/2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1936.52</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>6816.55</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3/27/2023</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Pharmacy - Kandy City</td>\n",
-       "      <td>Kandy</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>75</td>\n",
-       "      <td>Kandy</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Astron Pharma Supply</td>\n",
-       "      <td>No</td>\n",
-       "      <td>LK2282-55</td>\n",
-       "      <td>4/20/2024</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2335.56</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>4437.56</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2/15/2022</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Pharmacy - Ratnapura</td>\n",
-       "      <td>Ratnapura</td>\n",
-       "      <td>Sabaragamuwa</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Matara</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Softlogic Pharma Distribution</td>\n",
-       "      <td>No</td>\n",
-       "      <td>LK1809-97</td>\n",
-       "      <td>2/10/2023</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2781.10</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>5117.22</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3/10/2023</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Pharmacy - Kurunegala</td>\n",
-       "      <td>Kurunegala</td>\n",
-       "      <td>North Western</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>47</td>\n",
-       "      <td>Kandy</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Union Chemists Supply</td>\n",
-       "      <td>No</td>\n",
-       "      <td>LK9152-14</td>\n",
-       "      <td>8/1/2024</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1829.65</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>7958.98</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>12/4/2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Pharmacy - Kurunegala</td>\n",
-       "      <td>Kurunegala</td>\n",
-       "      <td>North Western</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>19</td>\n",
-       "      <td>Matara</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Softlogic Pharma Distribution</td>\n",
-       "      <td>No</td>\n",
-       "      <td>LK6182-19</td>\n",
-       "      <td>1/28/2024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1329.85</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>3470.91</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Transaction_ID Transaction_Date  Branch_ID            Branch_Name  \\\n",
-       "0               1        6/22/2023          5     Pharmacy - Negombo   \n",
-       "1               2        3/27/2023          2  Pharmacy - Kandy City   \n",
-       "2               3        2/15/2022          7   Pharmacy - Ratnapura   \n",
-       "3               4        3/10/2023          4  Pharmacy - Kurunegala   \n",
-       "4               5        12/4/2022          4  Pharmacy - Kurunegala   \n",
-       "\n",
-       "     District       Province Payment_Method Customer_Gender  Customer_Age  \\\n",
-       "0     Gampaha        Western           Card          Female            45   \n",
-       "1       Kandy        Central           Card          Female            75   \n",
-       "2   Ratnapura   Sabaragamuwa           Card          Female            20   \n",
-       "3  Kurunegala  North Western           Cash          Female            47   \n",
-       "4  Kurunegala  North Western           Card          Female            19   \n",
-       "\n",
-       "  Customer_City  ...                  Supplier_Name Prescription_Required  \\\n",
-       "0        Matara  ...          Ceylon Pharma Traders                    No   \n",
-       "1         Kandy  ...           Astron Pharma Supply                    No   \n",
-       "2        Matara  ...  Softlogic Pharma Distribution                    No   \n",
-       "3         Kandy  ...          Union Chemists Supply                    No   \n",
-       "4        Matara  ...  Softlogic Pharma Distribution                    No   \n",
-       "\n",
-       "    Batch_No Expiry_Date Quantity  Unit_Price_LKR  Discount_Rate  \\\n",
-       "0  LK6929-39   1/12/2025        4         1936.52           0.12   \n",
-       "1  LK2282-55   4/20/2024        2         2335.56           0.05   \n",
-       "2  LK1809-97   2/10/2023        2         2781.10           0.08   \n",
-       "3  LK9152-14    8/1/2024        5         1829.65           0.13   \n",
-       "4  LK6182-19   1/28/2024        3         1329.85           0.13   \n",
-       "\n",
-       "  Line_Total_LKR  Year Month  \n",
-       "0        6816.55  2023     6  \n",
-       "1        4437.56  2023     3  \n",
-       "2        5117.22  2022     2  \n",
-       "3        7958.98  2023     3  \n",
-       "4        3470.91  2022    12  \n",
-       "\n",
-       "[5 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file_path = \"/Users/arjun/Downloads/Pharmacy_OLTP_SLStyle_18Months.csv\"\n",
-    "sales = pd.read_csv(file_path)\n",
-    "sales.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8102ce85-7f40-429f-a349-b6b07dee74ab",
    "metadata": {},
    "outputs": [
     {
@@ -252,59 +26,16 @@
     }
    ],
    "source": [
+    "file_path = \"/Users/arjun/Downloads/Pharmacy_OLTP_SLStyle_18Months.csv\"\n",
+    "sales = pd.read_csv(file_path)\n",
+    "sales.head()\n",
     "print(\"Total rows:\", len(sales))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ef2aa06f-78b3-4491-a594-a3c9687913d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape: (50000, 27)\n",
-      "Categories for Sankey:\n",
-      "  Transaction_Date: 546 ✅\n",
-      "  Branch_Name: 7 ✅\n",
-      "  District: 7 ✅\n",
-      "  Province: 6 ✅\n",
-      "  Payment_Method: 3 ✅\n",
-      "  Customer_Gender: 2 ⚠️\n",
-      "  Customer_City: 8 ✅\n",
-      "  Medicine_Name: 146 ✅\n",
-      "  Generic_Name: 44 ✅\n",
-      "  Medicine_Category: 15 ✅\n",
-      "  Dosage_Form: 8 ✅\n",
-      "  Supplier_Name: 8 ✅\n",
-      "  Prescription_Required: 2 ⚠️\n",
-      "  Batch_No: 48447 ✅\n",
-      "  Expiry_Date: 1265 ✅\n",
-      "\n",
-      "Viable Sankey flows: 0/2 ✅\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Shape:\", sales.shape)\n",
-    "cats = sales.select_dtypes(include='object').columns\n",
-    "sankey_ready = {col: sales[col].nunique() for col in cats}\n",
-    "print(\"Categories for Sankey:\")\n",
-    "for col, n in sankey_ready.items():\n",
-    "    print(f\"  {col}: {n} {'✅' if n >= 3 else '⚠️'}\")\n",
-    "\n",
-    "# Sankey viable if any chain >=3 cols with 3+ cats each\n",
-    "viable_chains = sum(1 for chain in [['Pharmacy','Branch','Province'], ['Branch','Province','Payment_method']] \n",
-    "                    if all(sankey_ready.get(c,0) >=3 for c in chain))\n",
-    "print(f\"\\nViable Sankey flows: {viable_chains}/2 ✅\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b323c867-5725-4712-9adf-03b6872969cc",
+   "execution_count": 12,
+   "id": "8102ce85-7f40-429f-a349-b6b07dee74ab",
    "metadata": {},
    "outputs": [
     {
@@ -323,9 +54,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "578ea9cb-3a1d-47c4-984c-4706f755f771",
+   "metadata": {},
+   "source": [
+    "**Time Series Revenue Trend**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b323c867-5725-4712-9adf-03b6872969cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales[\"Transaction_Date\"] = pd.to_datetime(sales[\"Transaction_Date\"])\n",
+    "\n",
+    "#grouping transaction date based on month\n",
+    "monthly = sales.groupby(sales[\"Transaction_Date\"].dt.to_period(\"M\"))[\"Line_Total_LKR\"].sum()\n",
+    "monthly.index = monthly.index.to_timestamp()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3c0efd2-2690-44eb-85b3-4ae66c8edd47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bfe1479-392b-4ad4-965a-f964b96feda8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d7f866-0f6d-4940-b478-b5326bf5d2b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ef12bd51-a831-42bb-ba6d-45994a8d92f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dad2348e-d43b-4d2b-a8fc-92816d3b7e18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8b8c9df-17eb-4715-a552-d42d82031e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45e9a9c8-aa55-4a1f-bf5e-a8bc3022523a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63e8d59c-40c2-497c-8627-37efc47279ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e19afc31-713a-420e-8a50-423f4efada55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07384157-a269-444c-8ee3-a8b37a7ea7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05adb431-c6f9-4fdb-b15f-6b179e29937d",
    "metadata": {},
    "outputs": [],
    "source": []
