--- a/Medical_Sales/medical_sales.ipynb
+++ b/Medical_Sales/medical_sales.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "id": "0c786b4d-a61d-4aba-9291-1ce7829c5432",
    "metadata": {},
    "outputs": [
@@ -545,23 +545,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "id": "c80a4211-be5d-417d-bb75-440e28ce473d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#colomn addition for better usage of data\n",
     "sales[\"Expiry_Date\"] = pd.to_datetime(sales[\"Expiry_Date\"], errors=\"coerce\") #format change\n",
-    "df[\"Day_of_Week\"] = df[\"Transaction_Date\"].dt.day_name() #new colomn addition\n",
-    "df[\"Quarter\"] = \"Q\" + df[\"Transaction_Date\"].dt.quarter.astype(str)\n",
-    "df[\"Month_Name\"] = df[\"Transaction_Date\"].dt.strftime(\"%b\")\n",
-    "df[\"Days_to_Expiry\"] = (df[\"Expiry_Date\"] - df[\"Transaction_Date\"]).dt.days\n",
+    "sales[\"Day_of_Week\"] = sales[\"Transaction_Date\"].dt.day_name() #new colomn addition\n",
+    "sales[\"Quarter\"] = \"Q\" + sales[\"Transaction_Date\"].dt.quarter.astype(str) \n",
+    "sales[\"Month_Name\"] = sales[\"Transaction_Date\"].dt.strftime(\"%b\")\n",
+    "sales[\"Days_to_Expiry\"] = (sales[\"Expiry_Date\"] - sales[\"Transaction_Date\"]).dt.days\n",
     "\n",
     "bins   = [0,  30,  45,  60,  100]\n",
     "labels = [\"Young (18-30)\", \"Middle (31-45)\", \"Senior (46-60)\", \"Elderly (61+)\"]\n",
-    "df[\"Age_Group\"] = pd.cut(df[\"Customer_Age\"], bins=bins,labels=labels, right=True)\n",
+    "sales[\"Age_Group\"] = pd.cut(sales[\"Customer_Age\"], bins=bins,labels=labels, right=True)\n",
     "\n",
-    "df[\"Branch_Short\"] = df[\"Branch_Name\"].str.replace(\"Pharmacy - \", \"\",regex=False)\n"
+    "sales[\"Branch_Short\"] = sales[\"Branch_Name\"].str.replace(\"Pharmacy - \", \"\",regex=False)\n"
    ]
   },
   {
