time seres plot stage 2 completed

--- a/Medical_Sales/medical_sales.ipynb
+++ b/Medical_Sales/medical_sales.ipynb
@@ -584,7 +584,7 @@
     "\n",
     "sales[\"Revenue_Check\"] = (sales[\"Quantity\"] * sales[\"Unit_Price_LKR\"] * (1 - sales[\"Discount_Rate\"])).round(2)\n",
     "mismatch = (sales[\"Revenue_Check\"] - sales[\"Line_Total_LKR\"]).abs() > 0.05\n",
-    "print(f\"\\n✅ Revenue verification: {mismatch.sum()} mismatched rows\")\n",
+    "print(f\"evenue verification: {mismatch.sum()} mismatched rows\")\n",
     "sales.drop(columns=[\"Revenue_Check\"], inplace=True)"
    ]
   },
@@ -661,11 +661,9 @@
     "fig.suptitle(\"Feature Engineering — Distribution Checks\", fontsize=14)\n",
     "\n",
     "# Day of week distribution\n",
-    "day_order = [\"Monday\", \"Tuesday\", \"Wednesday\",\n",
-    "             \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "day_order = [\"Monday\", \"Tuesday\", \"Wednesday\",\"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
     "day_counts = sales[\"Day_of_Week\"].value_counts().reindex(day_order)\n",
-    "axes[0,0].bar(day_counts.index, day_counts.values,\n",
-    "              color=\"steelblue\", edgecolor=\"white\", alpha=0.85)\n",
+    "axes[0,0].bar(day_counts.index, day_counts.values,color=\"steelblue\", edgecolor=\"white\", alpha=0.85)\n",
     "axes[0,0].set_title(\"Transactions by Day of Week\")\n",
     "axes[0,0].set_xlabel(\"Day\")\n",
     "axes[0,0].set_ylabel(\"Count\")\n",
@@ -673,50 +671,55 @@
     "\n",
     "# Quarter distribution\n",
     "q_counts = sales[\"Quarter\"].value_counts().sort_index()\n",
-    "axes[0,1].bar(q_counts.index, q_counts.values,\n",
-    "              color=\"tomato\", edgecolor=\"white\", alpha=0.85)\n",
+    "axes[0,1].bar(q_counts.index, q_counts.values,color=\"tomato\", edgecolor=\"white\", alpha=0.85)\n",
     "axes[0,1].set_title(\"Transactions by Quarter\")\n",
     "axes[0,1].set_xlabel(\"Quarter\")\n",
     "axes[0,1].set_ylabel(\"Count\")\n",
     "\n",
     "# Age group distribution\n",
     "age_counts = sales[\"Age_Group\"].value_counts()\n",
-    "axes[0,2].bar(age_counts.index.astype(str), age_counts.values,\n",
-    "              color=\"seagreen\", edgecolor=\"white\", alpha=0.85)\n",
+    "axes[0,2].bar(age_counts.index.astype(str), age_counts.values,color=\"seagreen\", edgecolor=\"white\", alpha=0.85)\n",
     "axes[0,2].set_title(\"Customer Age Group Distribution\")\n",
     "axes[0,2].set_xlabel(\"Age Group\")\n",
     "axes[0,2].set_ylabel(\"Count\")\n",
     "axes[0,2].tick_params(axis=\"x\", rotation=20)\n",
     "\n",
     "# Days to expiry distribution\n",
-    "axes[1,0].hist(sales[\"Days_to_Expiry\"].dropna(), bins=40,\n",
-    "               color=\"mediumpurple\", edgecolor=\"white\", alpha=0.85)\n",
-    "axes[1,0].axvline(0, color=\"red\", linestyle=\"--\",\n",
-    "                  linewidth=1.5, label=\"Today (ref)\")\n",
-    "axes[1,0].axvline(90, color=\"orange\", linestyle=\"--\",\n",
-    "                  linewidth=1.5, label=\"90 days\")\n",
+    "axes[1,0].hist(sales[\"Days_to_Expiry\"].dropna(), bins=40,color=\"mediumpurple\", edgecolor=\"white\", alpha=0.85)\n",
+    "axes[1,0].axvline(0, color=\"red\", linestyle=\"--\",linewidth=1.5, label=\"Today (ref)\")\n",
+    "axes[1,0].axvline(90, color=\"orange\", linestyle=\"--\",linewidth=1.5, label=\"90 days\")\n",
     "axes[1,0].set_title(\"Days to Expiry Distribution\")\n",
     "axes[1,0].set_xlabel(\"Days to Expiry\")\n",
     "axes[1,0].set_ylabel(\"Count\")\n",
     "axes[1,0].legend(fontsize=8)\n",
     "\n",
     "# Total Revenue distribution\n",
-    "axes[1,1].hist(sales[\"Line_Total_LKR\"], bins=50,\n",
-    "               color=\"darkorange\", edgecolor=\"white\", alpha=0.85)\n",
+    "axes[1,1].hist(sales[\"Line_Total_LKR\"], bins=50,color=\"darkorange\", edgecolor=\"white\", alpha=0.85)\n",
     "axes[1,1].set_title(\"Line Total Revenue Distribution\")\n",
     "axes[1,1].set_xlabel(\"Line Total (LKR)\")\n",
     "axes[1,1].set_ylabel(\"Count\")\n",
     "\n",
     "# transaction count by branch\n",
     "b_counts = sales[\"Branch_Short\"].value_counts()\n",
-    "axes[1,2].barh(b_counts.index, b_counts.values,\n",
-    "               color=\"steelblue\", edgecolor=\"white\", alpha=0.85)\n",
+    "axes[1,2].barh(b_counts.index, b_counts.values,color=\"steelblue\", edgecolor=\"white\", alpha=0.85)\n",
     "axes[1,2].set_title(\"Transactions by Branch\")\n",
     "axes[1,2].set_xlabel(\"Count\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"eda_stage3_features.png\", dpi=150, bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "1be51906-c341-4c9d-afea-547e35b4dc13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales.to_csv(\"pharmacy_cleaned.csv\", index=False)\n",
+    "#from here ownwards i am going to proceed with cleaned data\n",
+    "sales_cleaned = pd.read_csv(\"pharmacy_cleaned.csv\") #so this will be used in tableau for creating dashboards"
    ]
   },
   {
@@ -729,21 +732,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "id": "b323c867-5725-4712-9adf-03b6872969cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales[\"Transaction_Date\"] = pd.to_datetime(sales[\"Transaction_Date\"])\n",
+    "sales_cleaned[\"Transaction_Date\"] = pd.to_datetime(sales_cleaned[\"Transaction_Date\"])\n",
     "\n",
     "#grouping transaction date based on month\n",
-    "monthly = sales.groupby(sales[\"Transaction_Date\"].dt.to_period(\"M\"))[\"Line_Total_LKR\"].sum()\n",
+    "monthly = sales_cleaned.groupby(sales_cleaned[\"Transaction_Date\"].dt.to_period(\"M\"))[\"Line_Total_LKR\"].sum()\n",
     "monthly.index = monthly.index.to_timestamp()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 87,
    "id": "6b704893-b510-4c1b-98aa-83c4de635904",
    "metadata": {},
    "outputs": [
@@ -763,32 +766,18 @@
     "fig, ax = plt.subplots(figsize=(12, 5))\n",
     "ax.plot(monthly.index, monthly.values / 1e6, color=\"blue\", linewidth=2, label=\"Monthly Revenue\")\n",
     "ax.plot(monthly.index, rolling_avg.values / 1e6,color=\"red\", linewidth=2, linestyle=\"--\", label=\"3-Month Rolling Avg\")\n",
-    "#fill area under the line\n",
     "ax.fill_between(monthly.index, monthly.values / 1e6, alpha=0.1, color=\"steelblue\")\n",
-    "\n",
-    "#formating axis\n",
     "plt.xticks(rotation=45, ha=\"right\")\n",
     "ax.xaxis.set_major_formatter(mdates.DateFormatter(\"%b %Y\"))\n",
     "ax.xaxis.set_major_locator(mdates.MonthLocator(interval=2))\n",
-    "\n",
-    "#labels\n",
     "ax.set_title(\"Monthly Revenue Trend (Jan 2022 - Jun 2023)\", fontsize=14)\n",
     "ax.set_xlabel(\"Month\")\n",
     "ax.set_ylabel(\"Revenue (Million LKR)\")\n",
     "ax.legend()\n",
     "ax.grid(axis=\"y\", linestyle=\"--\", alpha=0.5)\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "827bcc44-9336-48c6-89f9-b3fb38753b78",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
