radar code implimented

--- a/Medical_Sales/medical_sales.ipynb
+++ b/Medical_Sales/medical_sales.ipynb
@@ -1992,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 140,
    "id": "3d231bd9-19ea-4687-9121-64e74429d427",
    "metadata": {},
    "outputs": [],
@@ -2001,24 +2001,44 @@
     "    Revenue=(\"Line_Total_LKR\", \"sum\"),\n",
     "    Transactions=(\"Transaction_ID\", \"count\"),\n",
     "    AvgTicket=(\"Line_Total_LKR\", \"mean\"),\n",
+    "    AvgDiscount=(\"Discount_Rate\", \"mean\"),\n",
+    "    PrescRatio=(\"Prescription_Required\", lambda x: (x == \"Yes\").mean()),\n",
+    "    UniqueCategories=(\"Medicine_Category\", \"nunique\"),\n",
     ").reset_index()\n",
     "\n",
-    "for col in [\"Revenue\", \"Transactions\", \"AvgTicket\"]:\n",
+    "kpis = [\"Revenue\", \"Transactions\", \"AvgTicket\",\"PrescRatio\", \"UniqueCategories\"]\n",
+    "\n",
+    "for col in kpis:\n",
     "    mn, mx = branch_kpi[col].min(), branch_kpi[col].max()\n",
-    "    branch_kpi[f\"N_{col}\"] = (branch_kpi[col] - mn) / (mx - mn) #normalisation fo KPI between 0 and 1"
+    "    branch_kpi[f\"N_{col}\"] = (branch_kpi[col] - mn) / (mx - mn) #normalisation fo KPI between 0 and 1\n",
+    "\n",
+    "    mn, mx = branch_kpi[\"AvgDiscount\"].min(), branch_kpi[\"AvgDiscount\"].max()\n",
+    "branch_kpi[\"N_MarginScore\"] = 1 - (branch_kpi[\"AvgDiscount\"] - mn) / (mx - mn)\n",
+    "# Invert discount — lower discount = higher margin score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 141,
+   "id": "12ddd632-1e92-4417-b115-dc5d18a61ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radar_cols   = [\"N_Revenue\", \"N_Transactions\", \"N_AvgTicket\",\"N_PrescRatio\", \"N_UniqueCategories\", \"N_MarginScore\"]\n",
+    "radar_labels = [\"Revenue\", \"Transactions\", \"Avg Ticket\",\"Rx Ratio\", \"Cat. Mix\", \"Margin Score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "id": "07f33964-0b50-4699-bbd5-18c6d6343008",
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories = [\"Revenue\", \"Transactions\", \"Avg Ticket\"]\n",
-    "angles = np.linspace(0, 2 * np.pi, len(categories),\n",
-    "                     endpoint=False).tolist()\n",
-    "angles += angles[:1]"
+    "angles = np.linspace(0, 2 * np.pi, len(radar_labels),endpoint=False).tolist()\n",
+    "angles += angles[:1]\n",
+    "\n",
+    "colors = [\"steelblue\", \"tomato\", \"goldenrod\", \"seagreen\",\"mediumpurple\", \"darkorange\", \"teal\"]"
    ]
   },
   {
