need to do the branding now

--- a/Medical_Sales/medical_sales.ipynb
+++ b/Medical_Sales/medical_sales.ipynb
@@ -726,6 +726,124 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0213eeaf-af54-4f7b-a928-947746a57415",
+   "metadata": {},
+   "source": [
+    "**Branding**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "c0193609-c61b-4393-b6c6-54ba1a77253c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AMBER' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[116]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     22\u001b[39m SUBTLE  = \u001b[33m\"\u001b[39m\u001b[33m#5A7080\u001b[39m\u001b[33m\"\u001b[39m   \u001b[38;5;66;03m# axis labels, subtitles, captions\u001b[39;00m\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# ── Category colours (same order across all charts) ──────────────\u001b[39;00m\n\u001b[32m     25\u001b[39m CAT_COLORS = [TEAL, CORAL, GOLD, MINT, PLUM,\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m               SLATE, \u001b[43mAMBER\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33m#12A4BB\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m#F28C88\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     27\u001b[39m               \u001b[33m\"\u001b[39m\u001b[33m#F5CC7A\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m#7ED4A3\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m#B08DC7\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     28\u001b[39m               \u001b[33m\"\u001b[39m\u001b[33m#6D8BA4\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m#F09050\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m#C94F7C\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     30\u001b[39m BRANCH_COLORS = {\n\u001b[32m     31\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mColombo Fort\u001b[39m\u001b[33m\"\u001b[39m: TEAL,\n\u001b[32m     32\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mGalle\u001b[39m\u001b[33m\"\u001b[39m:        CORAL,\n\u001b[32m   (...)\u001b[39m\u001b[32m     37\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mRatnapura\u001b[39m\u001b[33m\"\u001b[39m:    SLATE,\n\u001b[32m     38\u001b[39m }\n",
+      "\u001b[31mNameError\u001b[39m: name 'AMBER' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#font\n",
+    "plt.rcParams[\"font.family\"]   = \"Source Sans Pro\"\n",
+    "plt.rcParams[\"font.size\"]     = 10\n",
+    "plt.rcParams[\"axes.titlesize\"]= 13\n",
+    "plt.rcParams[\"axes.labelsize\"]= 10\n",
+    "\n",
+    "#color palette\n",
+    "TEAL    = \"#0A7B8E\"   # main lines, branches, primary elements\n",
+    "CORAL   = \"#E85D54\"   # decline, risk, alert, trough\n",
+    "GOLD    = \"#E8A838\"   # trend lines, annotations, highlights\n",
+    "MINT    = \"#3CB878\"   # growth, positive, peak\n",
+    "PLUM    = \"#7B4F9E\"   # 3rd category, supporting elements\n",
+    "SLATE   = \"#3D5166\"   # separators, reference lines\n",
+    "AMBER   = \"#D4620A\"  \n",
+    "BG      = \"#F0F4F8\"   # all figure backgrounds\n",
+    "PANEL   = \"#FFFFFF\"   # all plot area backgrounds\n",
+    "GRID    = \"#D8E4EC\"   # all grid lines and spines\n",
+    "\n",
+    "\n",
+    "# Text\n",
+    "TEXT    = \"#1A2B3C\"   # titles, annotations\n",
+    "SUBTLE  = \"#5A7080\"   # axis labels, subtitles, captions\n",
+    "\n",
+    "# ── Category colours (same order across all charts) ──────────────\n",
+    "CAT_COLORS = [TEAL, CORAL, GOLD, MINT, PLUM,\n",
+    "              SLATE, AMBER, \"#12A4BB\", \"#F28C88\",\n",
+    "              \"#F5CC7A\", \"#7ED4A3\", \"#B08DC7\",\n",
+    "              \"#6D8BA4\", \"#F09050\", \"#C94F7C\"]\n",
+    "\n",
+    "BRANCH_COLORS = {\n",
+    "    \"Colombo Fort\": TEAL,\n",
+    "    \"Galle\":        CORAL,\n",
+    "    \"Jaffna\":       GOLD,\n",
+    "    \"Kandy City\":   MINT,\n",
+    "    \"Kurunegala\":   PLUM,\n",
+    "    \"Negombo\":      AMBER,\n",
+    "    \"Ratnapura\":    SLATE,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "3e506e4b-19c9-450e-86cb-543f7d79b9a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#style function\n",
+    "\n",
+    "def style_ax(ax, xlabel=\"\", ylabel=\"\",\n",
+    "             grid_axis=\"y\", spines=(\"bottom\", \"left\")):\n",
+    "    \"\"\"Apply consistent styling to any axes object\"\"\"\n",
+    "    ax.set_facecolor(PANEL)\n",
+    "    ax.tick_params(colors=SUBTLE, labelsize=9)\n",
+    "    for sp in ax.spines:\n",
+    "        ax.spines[sp].set_visible(sp in spines)\n",
+    "        if sp in spines:\n",
+    "            ax.spines[sp].set_color(GRID)\n",
+    "            ax.spines[sp].set_linewidth(0.8)\n",
+    "    if grid_axis:\n",
+    "        ax.grid(axis=grid_axis, color=GRID,\n",
+    "                linewidth=0.55, linestyle=\"--\",\n",
+    "                alpha=0.8, zorder=0)\n",
+    "        ax.set_axisbelow(True)\n",
+    "    if xlabel:\n",
+    "        ax.set_xlabel(xlabel, color=SUBTLE,\n",
+    "                      fontsize=9, labelpad=6)\n",
+    "    if ylabel:\n",
+    "        ax.set_ylabel(ylabel, color=SUBTLE,\n",
+    "                      fontsize=9, labelpad=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "49ecb36f-a7b4-4c75-8173-23a9a89620d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#title function\n",
+    "def fig_header(fig, title, subtitle=\"\"):\n",
+    "    \"\"\"Add consistent title and subtitle to figure\"\"\"\n",
+    "    fig.text(0.04, 0.977, title,\n",
+    "             fontsize=15, fontweight=\"bold\",\n",
+    "             color=TEXT, va=\"top\")\n",
+    "    if subtitle:\n",
+    "        fig.text(0.04, 0.945, subtitle,\n",
+    "                 fontsize=9, color=SUBTLE,\n",
+    "                 va=\"top\", style=\"italic\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "578ea9cb-3a1d-47c4-984c-4706f755f771",
    "metadata": {},
    "source": [
